# xai-demonstrator

./: .dockerignore  .gitattributes  .gitignore  404.html  CONTRIBUTORS  Docker-HelloWorld  README.md  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  requirements.txt  sitemap.xml
.github/: dependabot.yml
common/backend-utils/: README.md  index.html  pytest.ini  requirements-test.txt  setup.cfg  setup.py
common/backend-utils/tests/: conftest.py  test_routers.py  test_tracing.py
common/backend-utils/tests/tracking/: test_config.py  test_record.py  test_tracking.py
common/backend-utils/xaidemo/: http_client.py  routers.py  tracing.py
common/backend-utils/xaidemo/tracking/: README.md  __init__.py  config.py  index.html  middleware.py  record.py
deployment/: docker-compose.yml
docs/: about.md  index.md
experiment-tracker/: .env.test  .gitignore  README.md  docker-compose.yml  index.html  requirements.txt
guess-the-country/: .dockerignore  .gitignore  Dockerfile  README.md  build_frontend.sh  docker-compose.yml  index.html
landing-page/: .dockerignore  Dockerfile  README.md  nginx.conf
movie-service/: Dockerfile  docker-compose.yml
review-sentiment/: .dockerignore  .gitignore  CUDA_Dockerfile  Dockerfile  Dockerfile_CUDA  README.md  build_frontend.sh  docker-compose.yml  index.html
search/: search_index.json
test-service/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  test_main.py
visual-inspection/: .dockerignore  Dockerfile  README.md  build_frontend.sh  docker-compose.yml  download_model.sh  (+3 more)
(+482 files in other folders)
